<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/light_grey"
    android:padding="10dp"
    android:visibility="gone">
    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/dark_grey"
        android:text="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/moto"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/dark_blue"
        android:gravity="center"
        android:text="@string/welcome_message"/>
    <Button
        android:id="@+id/welcome_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:text="@string/ok"
        android:textColor="@android:color/black"/>
</LinearLayout>
