<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/principal_option1"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/addideia_cancel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/close_off"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/addideia_titulo" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:text="@string/addideia_nome"/>
    <EditText
        android:id="@+id/addideia_nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addideia_nome_hint"
        android:textSize="18sp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:text="@string/addideia_problema"/>
    <EditText
        android:id="@+id/addideia_problema"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:hint="@string/addideia_problema_hint"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:imeOptions="actionNext"
        android:lines="8"
        android:minLines="6"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>
    <Button
        android:id="@+id/addideia_salvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/addideia_salvar"
        android:background="@color/dark_blue"
        android:textColor="@android:color/white"/>
</LinearLayout>
