<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/principal_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textSize="30sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:text="@string/principal_titulo" />
        </LinearLayout>
        <TextView
            android:id="@+id/principal_resolva"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:background="@color/principal_option1"
            android:text="@string/principal_resolva" />
        <TextView
            android:id="@+id/principal_discuta"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:background="@color/principal_option2"
            android:text="@string/principal_discuta" />
        <TextView
            android:id="@+id/principal_faca"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:background="@color/principal_option3"
            android:text="@string/principal_faca" />
        <TextView
            android:id="@+id/principal_inspire"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:background="@color/principal_option4"
            android:text="@string/principal_inspire" />
        <!--<com.hackathon.congente.thirdparty.CoverFlow-->
            <!--android:id="@+id/principal_coverflow"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@android:color/white"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:text="@string/principal_exemplo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:text="@string/principal_exemplo2" />
        </LinearLayout>
    </LinearLayout>

    <!-- Listview to display slider menu -->
    <LinearLayout
        android:id="@+id/menu_view"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:clickable="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:text="@string/menu" />
            <ImageView
                android:id="@+id/principal_menu_aberto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:paddingRight="25dp"/>
        </LinearLayout>
        <ListView
            android:id="@+id/menu_list"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@android:color/black"
            android:dividerHeight="1dp"
            android:entries="@array/nav_drawer_items"
            android:background="@color/light_blue"/>
    </LinearLayout>
</FrameLayout>

